# neuroweave

./: .readthedocs.yaml  AC1-REQUIREMENTS.md  ARCHITECTURE.md  CHANGELOG.md  DEV_TUTORIAL.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  em_arch_overview.md  em_integration.md  mkdocs.yml  pyproject.toml
config/: default.yaml
docs/: architecture.md  changelog.md  getting-started.md  index.md
docs/api/: events.md  extraction.md  graph-store.md  index.md  neuroweave.md
docs/design/: em_pre_design.md  experience_memory.md
docs/user-guide/: configuration.md  events.md  queries.md  visualization.md
examples/: demo_agent.py  kg_chat_agent.py
src/neuroweave/: __init__.py  api.py  config.py  events.py  logging.py  main.py
src/neuroweave/extraction/: llm_client.py  pipeline.py
src/neuroweave/graph/: __init__.py  ingest.py  nl_query.py  query.py  store.py
src/neuroweave/graph/backends/: __init__.py  base.py  memory.py  neo4j.py
src/neuroweave/ingest/: __init__.py  document.py
src/neuroweave/server/: app.py
src/neuroweave/vector/: __init__.py  qdrant_bridge.py
static/: index.html
tests/: conftest.py  test_api.py  test_config.py  test_e2e.py  test_events.py  test_extraction.py  test_graph.py  test_ingest.py  test_integration.py  test_live_updates.py  test_logging.py  test_nl_query.py  test_query.py  test_server.py  test_smoke.py
tests/integration/: test_async_store_in_event_loop.py
tests/unit/: test_deduplication.py  test_document_ingestion.py  test_neo4j_async.py  test_neo4j_backend.py  test_qdrant_bridge.py  test_schema_bootstrap.py  test_scientific_schema.py
