[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroweave"
version = "0.1.0"
description = "Real-time knowledge graph memory for agentic AI platforms"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "networkx>=3.2",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
neuroweave = "neuroweave.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroweave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["neuroweave"]

[tool.coverage.report]
show_missing = true
skip_empty = true
