[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroweave"
version = "0.1.0"
description = "Real-time knowledge graph memory for agentic AI platforms"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "NeuroWeave Contributors" },
]
keywords = [
    "knowledge-graph",
    "ai-memory",
    "llm",
    "agentic-ai",
    "graph-database",
    "extraction",
    "networkx",
    "anthropic",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: FastAPI",
]
dependencies = [
    "anthropic>=0.42.0",
    "networkx>=3.2",
    "pydantic-settings>=2.7",
    "structlog>=25.5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=16.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.27",
    "ruff>=0.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[project.urls]
Homepage = "https://github.com/neuroweave/neuroweave"
Documentation = "https://neuroweave.readthedocs.io"
Repository = "https://github.com/neuroweave/neuroweave"
Changelog = "https://github.com/neuroweave/neuroweave/blob/main/CHANGELOG.md"
Issues = "https://github.com/neuroweave/neuroweave/issues"

[project.scripts]
neuroweave = "neuroweave.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroweave"]

[tool.hatch.build.targets.sdist]
include = [
    "src/neuroweave/",
    "static/",
    "config/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["neuroweave"]

[tool.coverage.report]
show_missing = true
skip_empty = true
